Modify Login endpoint to include message in response

--- a/Frontend/careerarcade/src/pages/Styles.css
+++ b/Frontend/careerarcade/src/pages/Styles.css
@@ -1,13 +1,11 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f4f4f9;
-  }
-  
-  .container {
+ .main{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+ 
+ .container {
     background: white;
     padding: 20px;
     border-radius: 10px;
