Add Signup page

--- a/Frontend/careerarcade/src/components/Navbar.css
+++ b/Frontend/careerarcade/src/components/Navbar.css
@@ -1,5 +1,9 @@
 /* Navbar Styling */
 .navbar {
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
