--- a/Frontend/careerarcade/src/App.css
+++ b/Frontend/careerarcade/src/App.css
@@ -7,5 +7,10 @@
     font-family: Outfit;
 }
 
-
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
