Add PostJob Page for employer

--- a/Frontend/careerarcade/src/components/css/YourProfile.css
+++ b/Frontend/careerarcade/src/components/css/YourProfile.css
@@ -8,9 +8,7 @@
     flex-grow: 1;
     width: 100%;
     padding: 20px;
-    background: #FFB76B;
-background: linear-gradient(to right, #FFB76B 0%, #FFA73D 30%, #FF7C00 60%, #FF7F04 100%);
-
+    background: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
