--- a/Frontend/careerarcade/src/pages/employer/css/EmployerDashboard.css
+++ b/Frontend/careerarcade/src/pages/employer/css/EmployerDashboard.css
@@ -13,14 +13,13 @@
     padding: 0.8rem;
     border-radius: 8px;
     background: white;
-    transition: all 1s linear;
+    transition: all 0.5s linear;
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   }
   
   .job-card:hover {
-    transition: all 1s linear;
-    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+    box-shadow: rgb(219, 7, 7) 0px 2px 4px 0px;
   }
   
   .truncate {
