--- a/Frontend/careerarcade/src/pages/employer/css/PostJob.css
+++ b/Frontend/careerarcade/src/pages/employer/css/PostJob.css
@@ -9,10 +9,6 @@
     background-color: #f4f6f8;
   }
   
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
   
   .message {
     text-align: center;
@@ -58,24 +54,18 @@
     height: 150px;
   }
   
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  input, textarea {
+  /* input, textarea {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
+  } */
   
   textarea {
     resize: vertical;
   }
   
-  button[type="submit"] {
+  /* button[type="submit"] {
     width: 100%;
     padding: 10px;
     background-color: #3498db;
@@ -85,5 +75,5 @@
     cursor: pointer;
     font-size: 16px;
     margin-top: 15px;
-  }
+  } */
   
