Fix more styling issues

--- a/Frontend/careerarcade/src/components/css/Navbar.css
+++ b/Frontend/careerarcade/src/components/css/Navbar.css
@@ -1,7 +1,7 @@
 /* Navbar Styling */
 .navbar {
   width: 100vw;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
     display: flex;
