--- a/Frontend/careerarcade/src/pages/Styles.css
+++ b/Frontend/careerarcade/src/pages/Styles.css
@@ -4,7 +4,7 @@
   align-items: center;
 }
 
- .container {
+ .login-container {
     background: white;
     padding: 20px;
     border-radius: 10px;
